syntax = "proto3";

service datamover {
	rpc Runjob(RunJobRequest) returns (RunJobResponse) {}
	rpc DoLifecycleAction(LifecycleActionRequest) returns (LifecycleActionResonse) {}
}

message KV {
	string key = 1;
	string value = 2;
}

message Filter {
	string prefix = 1;
	repeated KV tag = 2;
}

message Connector {
	string Type = 1; //opensds,aws,azure,hwcloud,etc.
	string BucketName = 2;
	repeated KV ConnConfig = 3;
}

message RunJobRequest{
	string Context = 1;
	string id = 2;
	Connector sourceConn = 3;
	Connector destConn = 4;
	Filter filt = 5;
	bool remainSource = 6;
}

message RunJobResponse {
	string err = 1;
}

message LifecycleActionRequest {
	string actx = 1;
	string objKey = 2;      // for transition and expiration
	string bucketName = 3;
	int32 action = 4;		// 0-Expiration, 1-IncloudTransition, 2-CrossCloudTransition, 3-AbortMultipartUpload
	int32 sourceTier = 5;   // only for transition
	int32 targetTier = 6;   // only for transtion
	string sourceBackend = 7; // for transition and expiration
	string targetBackend = 8; // for transition and abort incomplete multipart upload
	int64 objSize = 9;  	  // for transition
	int64 lastModified = 10;   // for transition and expiration
	string uploadId = 11;     // only for abort incomplete multipart upload
}

message LifecycleActionResonse {
	string err = 1;
}
